:bug: fix jumping scrollbar bug in collection preview component

--- a/src/components/collections-preview/collection-preview.styles.scss
+++ b/src/components/collections-preview/collection-preview.styles.scss
@@ -20,6 +20,7 @@ margin-bottom: 10vw;
     height: 100%;
     display: flex;
     flex-direction: row;
+    margin-bottom: 30vw;
     &__text {
       display: flex;
       width: 20%;
